--- a/OrdersWebOAuthClient/src/main/resources/application.properties
+++ b/OrdersWebOAuthClient/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=8080
+spring.application.name=auth-client
 
 
 spring.security.oauth2.client.registration.users-client-oidc.client-id=client1
 spring.security.oauth2.client.registration.users-client-oidc.client-secret=myClientSecretValue
 spring.security.oauth2.client.registration.users-client-oidc.scope=openid
 spring.security.oauth2.client.registration.users-client-oidc.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.users-client-oidc.redirect-uri=http://oauth-client:8080/login/oauth2/code/users-client-oidc
+spring.security.oauth2.client.registration.users-client-oidc.redirect-uri=http://auth-client:8080/login/oauth2/code/users-client-oidc
 
 spring.security.oauth2.client.provider.users-client-oidc.issuer-uri=http://auth-server:8000
 
