--- a/OrdersWebOAuthClient/src/main/resources/application.properties
+++ b/OrdersWebOAuthClient/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.security.oauth2.client.registration.users-client-oidc.client-id=client1
 spring.security.oauth2.client.registration.users-client-oidc.client-secret=myClientSecretValue
 spring.security.oauth2.client.registration.users-client-oidc.scope=openid
 spring.security.oauth2.client.registration.users-client-oidc.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.users-client-oidc.redirect-uri=http://auth-client:8080/login/oauth2/code/users-client-oidc
+spring.security.oauth2.client.registration.users-client-oidc.redirect-uri=http://auth-client-myproject.192.168.99.100.nip.io/login/oauth2/code/users-client-oidc
 
 spring.security.oauth2.client.provider.users-client-oidc.issuer-uri=http://auth-server:8000
 
