--- a/OrdersWebOAuthClient/src/main/resources/application.properties
+++ b/OrdersWebOAuthClient/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8080
 spring.application.name=auth-client
 
+microservices.employee.url=http://${AUTH-SERVER}:8080
+
 
 spring.security.oauth2.client.registration.users-client-oidc.client-id=client1
 spring.security.oauth2.client.registration.users-client-oidc.client-secret=myClientSecretValue
