--- a/OrdersWebOAuthClient/src/main/resources/application.properties
+++ b/OrdersWebOAuthClient/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.security.oauth2.client.registration.users-client-oidc.scope=openid
 spring.security.oauth2.client.registration.users-client-oidc.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.users-client-oidc.redirect-uri=http://auth-client-myproject.192.168.99.100.nip.io/login/oauth2/code/users-client-oidc
 
-spring.security.oauth2.client.provider.users-client-oidc.issuer-uri=http://auth-server-myproject.192.168.99.100.nip.io/token
+spring.security.oauth2.client.provider.users-client-oidc.issuer-uri=http://auth-server-myproject.192.168.99.100.nip.io
 
 management.health.circuitbreakers.enabled=true
 management.endpoints.web.exposure.include=health
