--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-eureka.client.service-url.defaultZone = http://localhost:8010/eureka
+eureka.client.service-url.defaultZone = http://discovery-service-myproject.192.168.99.100.nip.io/eureka
 
 spring.cloud.gateway.routes[0].id = airports/*
 spring.cloud.gateway.routes[0].uri = lb://resource-server
