--- a/gremlin-thinkerpop/src/main/resources/application.properties
+++ b/gremlin-thinkerpop/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=9090
 gremlin.graph=g
 gremlin.config=src/resources/remote.yaml
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-server:8000
-eureka.client.service-url.defaultZone = http://localhost:8010/eureka
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-server-myproject.192.168.99.100.nip.io
+eureka.client.service-url.defaultZone = http://discovery-service-myproject.192.168.99.100.nip.io/eureka
