--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -3,13 +3,13 @@ server.port=8082
 eureka.client.service-url.defaultZone = http://discovery-service-myproject.192.168.99.100.nip.io/eureka
 
 spring.cloud.gateway.routes[0].id = airports/*
-spring.cloud.gateway.routes[0].uri = lb://resource-server-myproject.192.168.99.100.nip.io
+spring.cloud.gateway.routes[0].uri = http://resource-server-myproject.192.168.99.100.nip.io
 spring.cloud.gateway.routes[0].predicates[0]=Path=/airports/*
 spring.cloud.gateway.routes[0].predicates[1]=Method=GET
 spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
 
 spring.cloud.gateway.routes[1].id = airports/*
-spring.cloud.gateway.routes[1].uri = lb://resource-server-myproject.192.168.99.100.nip.io
+spring.cloud.gateway.routes[1].uri = http://resource-server-myproject.192.168.99.100.nip.io
 spring.cloud.gateway.routes[1].predicates[0]=Path=/airports/*
 spring.cloud.gateway.routes[1].predicates[1]=Method=POST
 spring.cloud.gateway.routes[1].filters[0]=RemoveRequestHeader=Cookie
