--- a/OrdersWebOAuthClient/pom.xml
+++ b/OrdersWebOAuthClient/pom.xml
@@ -47,6 +47,10 @@
             <groupId>io.github.resilience4j</groupId>
             <artifactId>resilience4j-circuitbreaker</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>     
     </dependencies>
     <dependencyManagement>
         <dependencies>
