--- a/OrdersWebOAuthClient/src/main/resources/application.properties
+++ b/OrdersWebOAuthClient/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.security.oauth2.client.registration.users-client-oidc.redirect-uri=http:/
 
 spring.security.oauth2.client.provider.users-client-oidc.issuer-uri=http://auth-server-myproject.192.168.99.100.nip.io
 
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+
 management.health.circuitbreakers.enabled=true
 management.endpoints.web.exposure.include=health
 management.endpoint.health.show-details=always
